objects/Monthly_Performance__c.object
<CustomObject>
    <description>To store user and team&apos;s monthly performance.</description>
    <fields>
        <fullName>AVG_Call_Report_Customer__c</fullName>
        <formula>Total_Call_Report__c /Total_Contacted_Customer_Port_Pool_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVG Call Report / Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_Call_Report_RM__c</fullName>
        <label>AVG Call Report/RM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Others__c</fullName>
        <label># Call Report Customer Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Pool__c</fullName>
        <label># Call Report Customer Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Port__c</fullName>
        <label># Call Report Customer Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <label># Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_for_Relationship__c</fullName>
        <label># Call Report for Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_for_Sales__c</fullName>
        <label># Call Report for Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Other_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Other(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Pool_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Pool(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Port_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Port(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Face_to_Face__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Face to Face</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Performance__c</fullName>
        <formula>CASE(MONTH( Date__c ),
1, &quot;1. January&quot;,
2, &quot;2. February&quot;,
3, &quot;3. March&quot;,
4, &quot;4. April&quot;,
5, &quot;5. May&quot;,
6, &quot;6. June&quot;,
7, &quot;7. July&quot;,
8, &quot;8. August&quot;,
9, &quot;9. September&quot;,
10, &quot;10. October&quot;,
11, &quot;11. November&quot;,
12, &quot;12. December&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <label># Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RM_under_Team__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of RM under Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Others__c</fullName>
        <formula>IF(Total_Call_Report__c&lt;&gt;0,Call_Report_Customer_Others__c / Total_Call_Report__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Pool__c</fullName>
        <formula>IF(Total_Call_Report__c&lt;&gt;0,Call_Report_Customer_Pool__c / Total_Call_Report__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Port__c</fullName>
        <formula>IF(Total_Call_Report__c&lt;&gt;0,Call_Report_Customer_Port__c / Total_Call_Report__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Port</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_for_Relationship__c</fullName>
        <formula>IF(Total_Sales_Relationship__c&lt;&gt;0,Call_Report_for_Relationship__c / Total_Sales_Relationship__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report for Relationship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_for_Sales__c</fullName>
        <formula>IF(Total_Sales_Relationship__c&lt;&gt;0,Call_Report_for_Sales__c / Total_Sales_Relationship__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report for Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Other_My_Penetrate__c</fullName>
        <formula>IF(Customer_Other__c&lt;&gt;0, Contacted_Customer_Other_My_Penetrate__c / Customer_Other__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Other(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Other__c</fullName>
        <formula>IF(Customer_Other__c&lt;&gt;0, Contacted_Customer_Other__c/Customer_Other__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer in Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Pool_My_Penetrate__c</fullName>
        <formula>IF(Customer_Pool__c&lt;&gt;0,Contacted_Customer_Pool_My_Penetrate__c /  Customer_Pool__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Pool (My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Pool__c</fullName>
        <formula>IF(Customer_Pool__c&lt;&gt;0,Contacted_Customer_Pool__c / Customer_Pool__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer in Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Port_My_Penetrate__c</fullName>
        <formula>IF( Customer_Port__c&lt;&gt;0,Contacted_Customer_Port_My_Penetrate__c /  Customer_Port__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Port(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Port__c</fullName>
        <formula>IF(Customer_Port__c&lt;&gt;0,Contacted_Customer_Port__c /  Customer_Port__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer in Port</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PFace_to_Face__c</fullName>
        <formula>IF(Total_Face_to_Face_Call__c&lt;&gt;0,Face_to_Face__c / Total_Face_to_Face_Call__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Face to Face</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPhone_Call__c</fullName>
        <formula>IF(Total_Face_to_Face_Call__c&lt;&gt;0,Phone_Call__c / Total_Face_to_Face_Call__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Phone Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Call_Report__c</fullName>
        <formula>PCall_Report_Customer_Others__c + PCall_Report_Customer_Pool__c + PCall_Report_Customer_Port__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Call Report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_My_P__c</fullName>
        <formula>if(Customer_Port__c + Customer_Pool__c+Customer_Other__c=0,0,(Contacted_Customer_Port_My_Penetrate__c + Contacted_Customer_Pool_My_Penetrate__c+Contacted_Customer_Other_My_Penetrate__c )/  ( Customer_Port__c + Customer_Pool__c+Customer_Other__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_Port_Pool_My_P__c</fullName>
        <formula>if(Customer_Port__c + Customer_Pool__c=0,0,(Contacted_Customer_Port_My_Penetrate__c + Contacted_Customer_Pool_My_Penetrate__c )/  ( Customer_Port__c + Customer_Pool__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer Port&amp;Pool(MP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_Port_Pool__c</fullName>
        <formula>if ( Customer_Port__c + Customer_Pool__c = 0,0,( Contacted_Customer_Port__c + Contacted_Customer_Pool__c )/  ( Customer_Port__c + Customer_Pool__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer Port&amp;Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer__c</fullName>
        <formula>if ( Customer_Port__c + Customer_Pool__c +Customer_Other__c= 0,0,( Contacted_Customer_Port__c + Contacted_Customer_Pool__c +Contacted_Customer_Other__c)/  ( Customer_Port__c + Customer_Pool__c +Customer_Other__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Face_to_Face_Call__c</fullName>
        <formula>PPhone_Call__c + PFace_to_Face__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Face to Face &amp; Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Sales_Relationship__c</fullName>
        <formula>PCall_Report_for_Relationship__c + PCall_Report_for_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Sales &amp; Relationship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Call__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Phone Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Monthly Performance</relationshipLabel>
        <relationshipName>Monthly_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Call_Report__c</fullName>
        <formula>Call_Report_Customer_Port__c + Call_Report_Customer_Pool__c + Call_Report_Customer_Others__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacted_Customer_My_Penetrate__c</fullName>
        <formula>Contacted_Customer_Other_My_Penetrate__c + Contacted_Customer_Pool_My_Penetrate__c + Contacted_Customer_Port_My_Penetrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contacted Customer(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacted_Customer_Port_Pool_Other__c</fullName>
        <formula>Contacted_Customer_Port__c + Contacted_Customer_Pool__c + Contacted_Customer_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contacted Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customer__c</fullName>
        <formula>Customer_Other__c + Customer_Pool__c +Customer_Port__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Face_to_Face_Call__c</fullName>
        <formula>Phone_Call__c + Face_to_Face__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Face to Face &amp; Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Relationship__c</fullName>
        <formula>Call_Report_for_Relationship__c + Call_Report_for_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales &amp; Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_visited_Customer__c</fullName>
        <label>Total visited Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User_Extension__c</referenceTo>
        <relationshipLabel>Monthly Performance</relationshipLabel>
        <relationshipName>Monthly_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Monthly Performance</label>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>